--- a/events.html
+++ b/events.html
@@ -28,7 +28,7 @@
         </div>
       </header>
 
-        <div class="max-w-2xl mt-10 mx-auto overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800">
+        <!-- <div class="max-w-2xl mt-10 mx-auto overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800">
           <img class="object-cover w-full h-64" src="events/hero.png" alt="Article">
 
           <div class="p-6">
@@ -54,7 +54,7 @@
                   </div>
               </div>
           </div>
-      </div>
+      </div> -->
 
       <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto">
@@ -63,41 +63,25 @@
               <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">Upcoming Events</h1>
               <div class="h-1 w-20 bg-yellow-500 rounded"></div>
             </div>
-            <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom prism food truck ugh squid celiac humblebrag.</p>
+            <!-- <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom prism food truck ugh squid celiac humblebrag.</p> -->
           </div>
-          <div class="flex flex-wrap -m-4">
-            <div class="xl:w-1/4 md:w-1/2 p-4">
-              <div class="bg-gray-100 p-6 rounded-lg">
-                <img class="h-40 rounded w-full object-cover object-center mb-6" src="events/assets/event_1.jpeg" alt="content">
-                <h3 class="tracking-widest text-yellow-500 text-xs font-medium title-font">12/09/2021</h3>
-                <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Intro to TinkerHub</h2>
-                <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+          <div class="flex justify-center -m-4" id="upcoming-events">
+            <div class="max-w-2xl mt-10 mx-auto overflow-hidden bg-white rounded-lg shadow-md hover:shadow-lg dark:bg-gray-800">
+              <img class="object-cover w-full h-64" src="events/hero.png" alt="Article">
+              <div class="p-6">
+                  <div>
+                      <span class="text-xs font-medium text-yellow-600 uppercase dark:text-blue-400">Latest Event</span>
+                      <a href="#" class="block mt-2 text-2xl font-semibold text-gray-800 dark:text-white hover:text-gray-600 hover:underline">The Essentials</a>
+                      <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Molestie parturient et sem ipsum volutpat vel. Natoque sem et aliquam mauris egestas quam volutpat viverra. In pretium nec senectus erat. Et malesuada lobortis.</p>
+                      <a class="text-yellow-500 inline-flex items-center mt-2 md:mb-2 lg:mb-0">Register Now
+                        <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                          <path d="M5 12h14"></path>
+                          <path d="M12 5l7 7-7 7"></path>
+                        </svg>
+                      </a>
+                    </div>
               </div>
-            </div>
-            <div class="xl:w-1/4 md:w-1/2 p-4">
-              <div class="bg-gray-100 p-6 rounded-lg">
-                <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/721x401" alt="content">
-                <h3 class="tracking-widest text-yellow-500 text-xs font-medium title-font">SUBTITLE</h3>
-                <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Colosseum Roma</h2>
-                <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
-              </div>
-            </div>
-            <div class="xl:w-1/4 md:w-1/2 p-4">
-              <div class="bg-gray-100 p-6 rounded-lg">
-                <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/722x402" alt="content">
-                <h3 class="tracking-widest text-yellow-500 text-xs font-medium title-font">SUBTITLE</h3>
-                <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Great Pyramid of Giza</h2>
-                <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
-              </div>
-            </div>
-            <div class="xl:w-1/4 md:w-1/2 p-4">
-              <div class="bg-gray-100 p-6 rounded-lg">
-                <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403" alt="content">
-                <h3 class="tracking-widest text-yellow-500 text-xs font-medium title-font">SUBTITLE</h3>
-                <h2 class="text-lg text-gray-900 font-medium title-font mb-4">San Francisco</h2>
-                <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
-              </div>1
-            </div>
+          </div>
           </div>
         </div>
       </section>
@@ -111,7 +95,7 @@
             </div>
             <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom prism food truck ugh squid celiac humblebrag.</p>
           </div>
-          <div class="flex flex-wrap -m-4">
+          <div class="flex md:justify-between justify-center flex-wrap -m-4" id="learning-programs">
             <div class="xl:w-1/4 md:w-1/2 p-4">
               <div class="bg-gray-100 p-6 rounded-lg">
                 <img class="h-40 rounded w-full object-cover object-center mb-6" src="events/assets/event_1.jpeg" alt="content">
@@ -157,7 +141,7 @@
             </div>
             <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom prism food truck ugh squid celiac humblebrag.</p>
           </div>
-          <div class="flex flex-wrap -m-4">
+          <div class="flex md:justify-between justify-center flex-wrap -m-4" id="bootcamps">
             <div class="xl:w-1/4 md:w-1/2 p-4">
               <div class="bg-gray-100 p-6 rounded-lg">
                 <img class="h-40 rounded w-full object-cover object-center mb-6" src="events/assets/event_1.jpeg" alt="content">
@@ -204,7 +188,7 @@
             </div>
             <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom prism food truck ugh squid celiac humblebrag.</p>
           </div>
-          <div class="flex flex-wrap -m-4">
+          <div class="flex md:justify-between justify-center flex-wrap -m-4" id="community-events">
             <div class="xl:w-1/4 md:w-1/2 p-4">
               <div class="bg-gray-100 p-6 rounded-lg">
                 <img class="h-40 rounded w-full object-cover object-center mb-6" src="events/assets/event_1.jpeg" alt="content">
@@ -274,5 +258,6 @@
           </span>
         </div>
       </footer>
+      <script src="js/main.js"></script>
   </body>
 </html>
