--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">We love stories,
               <br class="hidden lg:inline-block"> we make them. 
             </h1>
-            <p class="mb-8 leading-relaxed">We are a community of tinkerers, makers, policy geeks & students and are working towards mapping and empowering people who share a passion to innovate.</p>
+            <p class="mb-8 leading-relaxed">Yes! We together build up a great community through peer to peer learning experiences
+              that connect, inspire and engage students to upskill their talents.</p>
             <div class="flex justify-center">
-              <button class="inline-flex text-black bg-yellow-300 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-400 rounded text-lg">Join</button>
-              <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Know More</button>
+              <a class="inline-flex text-black bg-yellow-300 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-400 rounded text-lg" href="https://forms.gle/boTTnkrd4LKUDQBfA">Join</>
+              <a class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg" href="https://tinkerhub.org/">Know More</a>
             </div>
           </div>
           <!-- <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
@@ -62,21 +63,21 @@
             </div>
             <div class="flex flex-col sm:flex-row mt-10">
               <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
-                <div class="w-20 h-20 rounded-full inline-flex items-center justify-center bg-gray-200 text-gray-400">
-                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
-                    <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-                    <circle cx="12" cy="7" r="4"></circle>
+                <div class="w-20 h-20 rounded-full inline-flex items-center justify-center bg-gray-200 text-yellow-400">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" viewBox="0 0 20 20" fill="currentColor">
+                    <path d="M11 3a1 1 0 10-2 0v1a1 1 0 102 0V3zM15.657 5.757a1 1 0 00-1.414-1.414l-.707.707a1 1 0 001.414 1.414l.707-.707zM18 10a1 1 0 01-1 1h-1a1 1 0 110-2h1a1 1 0 011 1zM5.05 6.464A1 1 0 106.464 5.05l-.707-.707a1 1 0 00-1.414 1.414l.707.707zM5 10a1 1 0 01-1 1H3a1 1 0 110-2h1a1 1 0 011 1zM8 16v-1h4v1a2 2 0 11-4 0zM12 14c.015-.34.208-.646.477-.859a4 4 0 10-4.954 0c.27.213.462.519.476.859h4.002z" />
                   </svg>
                 </div>
                 <div class="flex flex-col items-center text-center justify-center">
-                  <h2 class="font-medium title-font mt-4 text-gray-900 text-lg">Moosa Mehar</h2>
+                  <h2 class="font-medium title-font mt-4 text-gray-900 text-lg">Philosophy</h2>
                   <div class="w-12 h-1 bg-yellow-300 rounded mt-2 mb-4"></div>
-                  <p class="text-base">Raclette knausgaard hella meggs normcore williamsburg enamel pin sartorial venmo tbh hot chicken gentrify portland.</p>
+                  <p class="text-base">Skills have become more or less a measure of a person’s value to an organisation today. If you’re fretting that you don’t have a top-rated skill, just say Hakuna Matata!, [<a class="underline text-yellow-500" target="bank" href="https://www.notion.so/Philosophy-9b1485d8c4b944e5b18777a25af02f89">more</a>]</p>
                 </div>
               </div>
               <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-200 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
-                <p class="leading-relaxed text-lg mb-4">TinkerHub Farook College is a Campus Community Initiative of TinkerHub Foundation, a non profit organization registered on 2016. Fueled by the widening gap between technology employment opportunities and the availability of a local workforce to fill them is the major challenge we face today. Tinkerhub Farook College focus on enabling a peer to peer technology learning culture in campus. We aim at creating a potent workforce, capable of unlocking the vast reservoir of untapped potential, in the form of creativity and innovation that the youth of the 21st century holds</p>
-                <a class="text-yellow-500 inline-flex items-center">Learn More
+                <p class="leading-relaxed text-lg mb-4">Tinkerhub Farook college is a campus community intiative of Tinkerhub foundation,a non-profit initiative aimed at making use of 21st-century technologies and learning methods to foster highly skilled young people empowered with technical and social skills
+                  Here we hold hands with Tinkerhub Foundation and take pride in learning and growing together with them.In this journey Tinkerhub Farook college focuses on enabling a peer to peer learning culture in the campus and promote a sense of community and belonging among the students</p>
+                <a class="text-yellow-500 inline-flex items-center" href="https://tinkerhub.org/">Learn More
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                     <path d="M5 12h14M12 5l7 7-7 7"></path>
                   </svg>
@@ -94,18 +95,18 @@
               <div class="w-24 h-full bg-yellow-500"></div>
             </div>
             <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
-              <h1 class="sm:w-2/5 text-gray-900 font-medium title-font text-2xl mb-2 sm:mb-0">Latest Events</h1>
-              <p class="sm:w-3/5 leading-relaxed text-base sm:pl-10 pl-0">Street art subway tile salvia four dollar toast bitters selfies quinoa yuccie synth meditation iPhone intelligentsia prism tofu. Viral gochujang bitters dreamcatcher.</p>
+              <h1 class="sm:w-2/5 text-gray-900 font-medium title-font text-2xl mb-2 sm:mb-0">Popular Events</h1>
+              <p class="sm:w-3/5 leading-relaxed text-base sm:pl-10 pl-0">Sneek peek into popular events organized by TinkerHub Farook College.</p>
             </div>
           </div>
           <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
             <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
               <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1203x503">
+                <img alt="content" class="object-cover object-center h-full w-full" src="events/assets/event_9.jpeg">
               </div>
-              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Shooting Stars</h2>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">WIT Orientation</h2>
               <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-              <a class="text-yellow-500 inline-flex items-center mt-3">Learn More
+              <a class="text-yellow-500 inline-flex items-center mt-3" href="events.html">Learn More
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
                 </svg>
@@ -113,11 +114,11 @@
             </div>
             <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
               <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1204x504">
+                <img alt="content" class="object-cover object-center h-full w-full" src="events/assets/event_6.png">
               </div>
-              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">The Catalyzer</h2>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Python KickStart</h2>
               <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-              <a class="text-yellow-500 inline-flex items-center mt-3">Learn More
+              <a class="text-yellow-500 inline-flex items-center mt-3" href="events.html">Learn More
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
                 </svg>
@@ -125,11 +126,11 @@
             </div>
             <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
               <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1205x505">
+                <img alt="content" class="object-cover object-center h-full w-full" src="events/assets/event_16.jpeg">
               </div>
-              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">The 400 Blows</h2>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Intro to UI/UX</h2>
               <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-              <a class="text-yellow-500 inline-flex items-center mt-3">Learn More
+              <a class="text-yellow-500 inline-flex items-center mt-3" href="events.html">Learn More
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
                 </svg>
@@ -145,7 +146,7 @@
             <h1 class="text-2xl font-medium title-font mb-4 text-gray-900 tracking-widest">Execom 2021</h1>
             <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them.</p>
           </div>
-          <div class="flex flex-wrap -m-4">
+          <div class="flex flex-wrap justify-center md:justify-start -m-4">
             <div class="p-4 lg:w-1/2">
               <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
                 <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="img/execom/Rijfas.jpg">
