--- a/events.html
+++ b/events.html
@@ -96,7 +96,7 @@
             <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Learning programs help students to learn with effective mentorship support
               These programs focus on students who are interested in learning technology and make them confident to find their own passion in tech.</p>
           </div>
-          <div class="flex md:justify-evenly justify-center flex-wrap -m-4" id="learning-programs">
+          <div class="flex md:justify-evenly justify-center flex-wrap items-stretch -m-4" id="learning-programs">
             <div class="flex justify-center mt-5" id="loader"><img src="img/loading.gif" alt="loading" class="w-5 h-5"></div>
           </div>
         </div>
@@ -111,7 +111,7 @@
             </div>
             <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Bootcamps help students to get exposed to a new skill developing environment where they learn build and collaborate to build a project in a short period of time with greater learning experiences.</p>
           </div>
-          <div class="flex md:justify-evenly justify-center flex-wrap -m-4" id="bootcamps">
+          <div class="flex md:justify-evenly justify-center flex-wrap items-stretch  -m-4" id="bootcamps">
             <div class="flex justify-center mt-5" id="loader"><img src="img/loading.gif" alt="loading" class="w-5 h-5"></div>
           </div>
         </div>
@@ -127,7 +127,7 @@
             </div>
             <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">The community events gather the community members together where they play fun games,share their ideas and build bonds with each other.</p>
           </div>
-          <div class="flex md:justify-evenly justify-center flex-wrap -m-4" id="community-events">
+          <div class="flex md:justify-evenly justify-center flex-wrap items-stretch  -m-4" id="community-events">
             <div class="flex justify-center mt-5" id="loader"><img src="img/loading.gif" alt="loading" class="w-5 h-5"></div>
           </div>
         </div>
