--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 </div>
               </div>
               <div class="p-2 w-full">
-                <button class="flex mx-auto text-black bg-yellow-300 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-600 rounded text-lg">Button</button>
+                <button class="flex mx-auto text-black bg-yellow-300 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-600 rounded text-lg">Submit</button>
               </div>
               
             </div>
