youtube videos added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/tailwind.min.css" />
-    <title>TinkerHub FC</title>
+    <title>TinkerHub Farook College</title>
   </head>
   <body>
     <header class="text-gray-600 body-font border-b-2 border-collapse">
@@ -143,9 +143,69 @@
 
       <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto">
+          <div class="flex flex-col">
+            <div class="h-1 bg-gray-200 rounded overflow-hidden">
+              <div class="w-24 h-full bg-yellow-500"></div>
+            </div>
+            <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
+              <h1 class="sm:w-2/5 text-gray-900 font-medium title-font text-2xl mb-2 sm:mb-0">YouTube Videos/Playlists</h1>
+              <p class="sm:w-3/5 leading-relaxed text-base sm:pl-10 pl-0">Some playlists/videos published in TinkerHub Farook College 
+                <a class="text-yellow-500 inline-flex items-center mt-3" target="_blank" href="https://www.youtube.com/channel/UCfHpoBCfct0z0GU2azdfD7Q">YouTube Channel.</a>
+              </p>
+            </div>
+          </div>
+          <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
+            <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+              <div class="rounded-lg h-64 overflow-hidden">
+                <iframe class="object-cover object-center h-full w-full" src="https://www.youtube.com/embed/videoseries?list=PLMcXnpz61pA7AzRC7x_u7aBIj4EIFOT7z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Python KickStart</h2>
+              <p class="text-base leading-relaxed mt-2">Python Kickstart was our first major series conducted. Main agenda of this program was to introduce python programming for absolute beginners This program lasted for about 1 month.</p>
+            </div>
+            <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+              <div class="rounded-lg h-64 overflow-hidden">
+                <iframe class="object-cover object-center h-full w-full" src="https://www.youtube.com/embed/videoseries?list=PLMcXnpz61pA55P8OdzQVjDZE2w12ARkTF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">C Revision</h2>
+              <p class="text-base leading-relaxed mt-2">A series to get familiar in C programming for bio students, hands on live sessions completed with 20+ hours.</p>
+            </div>
+            <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+              <div class="rounded-lg h-64 overflow-hidden">
+                <iframe class="object-cover object-center h-full w-full" src="https://www.youtube.com/embed/videoseries?list=PLMcXnpz61pA4_5UYgsuHJtuis0f9ep9nm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Workshops</h2>
+              <p class="text-base leading-relaxed mt-2">Small workshops to get started in a tool or a technical field.</p>
+            </div>
+            <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+              <div class="rounded-lg h-64 overflow-hidden">
+                <iframe class="object-cover object-center h-full w-full" src="https://www.youtube.com/embed/videoseries?list=PLMcXnpz61pA6ZSMDUATsfJACc3vFt8tTw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Talks</h2>
+              <p class="text-base leading-relaxed mt-2">Inspiring talks conducted by TinkerHub Farook College community members.</p>
+            </div>
+            <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+              <div class="rounded-lg h-64 overflow-hidden">
+                <iframe class="object-cover object-center h-full w-full" src="https://www.youtube.com/embed/videoseries?list=PLMcXnpz61pA48xdzhA8lsR8ICpMwXKwrl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">The Essentials</h2>
+              <p class="text-base leading-relaxed mt-2">The Essentials is a series of events well-curated for those who want to start their journey in tech. The events will be a perfect blend of learning and hands-on with constant mentor support helping everyone explore and grow simultaneously.</p>
+            </div>
+            <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+              <div class="rounded-lg h-64 overflow-hidden">
+                <iframe class="object-cover object-center h-full w-full" src="https://www.youtube.com/embed/fk3h85p29Ec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Introduction to Linkedin</h2>
+              <p class="text-base leading-relaxed mt-2">The idea of this session was to give a basic idea about LinkedIn and how it will be useful for our career. This session was handled by Kavya P (Outreach Co-Lead, TinkerHub FC) on 19/09/2021.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="text-gray-600 body-font">
+        <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-col text-center w-full mb-20">
             <h1 class="text-2xl font-medium title-font mb-4 text-gray-900 tracking-widest">Execom 2021</h1>
-            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them.</p>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">The world is changing, and we want India to be ready. We're here to make sure that everyone has access to the knowledge required to set the course for a better future.</p>
           </div>
           <div class="flex flex-wrap justify-center md:justify-start -m-4">
             <div class="p-4 lg:w-1/2">
@@ -278,33 +338,34 @@
             <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Contact Us</h1>
             <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Write your thoughts and ideas to TinkerHub FC.</p>
           </div>
-          <div class="lg:w-1/2 md:w-2/3 mx-auto">
-            <div class="flex flex-wrap -m-2">
-              <div class="p-2 w-1/2">
-                <div class="relative">
-                  <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
-                  <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+            <form method="POST" data-netlify="true">
+              <div class="lg:w-1/2 md:w-2/3 mx-auto">
+                <div class="flex flex-wrap -m-2">
+                    <div class="p-2 w-1/2">
+                      <div class="relative">
+                        <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
+                        <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                      </div>
+                    </div>
+                    <div class="p-2 w-1/2">
+                      <div class="relative">
+                        <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
+                        <input type="email" id="email" name="email" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                      </div>
+                    </div>
+                    <div class="p-2 w-full">
+                      <div class="relative">
+                        <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
+                        <textarea id="message" name="message" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+                      </div>
+                    </div>
+                    <div class="p-2 w-full">
+                      <button type="submit" class="flex mx-auto text-black bg-yellow-300 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-600 rounded text-lg">Submit</button>
+                    </div>
                 </div>
               </div>
-              <div class="p-2 w-1/2">
-                <div class="relative">
-                  <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
-                  <input type="email" id="email" name="email" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-                </div>
-              </div>
-              <div class="p-2 w-full">
-                <div class="relative">
-                  <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
-                  <textarea id="message" name="message" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-yellow-500 focus:bg-white focus:ring-2 focus:ring-yellow-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
-                </div>
-              </div>
-              <div class="p-2 w-full">
-                <button class="flex mx-auto text-black bg-yellow-300 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-600 rounded text-lg">Submit</button>
-              </div>
-              
             </div>
-          </div>
-        </div>
+          </form>
       </section>
 
       <footer class="text-gray-600 body-font">
