--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/tailwind.min.css" />
-    <title>TinkerHub FC</title>
+    <title>TinkerHub Farook College</title>
   </head>
   <body>
     <header class="text-gray-600 body-font border-b-2 border-collapse">
