--- a/events.html
+++ b/events.html
@@ -164,6 +164,7 @@
           <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 TinkerHub FC —
             <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@rijfas</a>
             <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@unnikrishnan</a>
+            <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@Adilayyoob</a>
           </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
             <a class="text-gray-500" href="https://www.youtube.com/channel/UCfHpoBCfct0z0GU2azdfD7Q" target="_blank">
