hotfix-added-adilayyoob-credits

--- a/events.html
+++ b/events.html
@@ -152,62 +152,6 @@
     </div>
   </section>
 
-  <section class="text-gray-600 body-font">
-    <div class="container px-5 py-24 mx-auto">
-      <div class="flex flex-wrap w-full mb-20">
-        <div class="lg:w-1/2 w-full mb-6 lg:mb-0 wow fadeInLeft">
-          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">Achievements</h1>
-          <div class="h-1 w-20 bg-yellow-500 rounded"></div>
-        </div>
-<<<<<<< HEAD
-        <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-          <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-            <img src="img/logo.png" alt="TFC Logo" class="w-40 text-white p-2 ">
-          </a>
-          <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 TinkerHub FC —
-            <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@rijfas</a>
-            <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@unnikrishnan</a>
-            <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@Adilayyoob</a>
-          </p>
-          <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-            <a class="text-gray-500" href="https://www.youtube.com/channel/UCfHpoBCfct0z0GU2azdfD7Q" target="_blank">
-              <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 640 480" xml:space="preserve">
-                <g transform="matrix(1.94 0 0 1.94 319.96 239.79)" id="XMLID_823_"  >
-                <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(107,114,128); fill-rule: nonzero; opacity: 1;"  transform=" translate(-155, -155)" d="M 297.917 64.645 c -11.19 -13.302 -31.85 -18.728 -71.306 -18.728 H 83.386 c -40.359 0 -61.369 5.776 -72.517 19.938 C 0 79.663 0 100.008 0 128.166 v 53.669 c 0 54.551 12.896 82.248 83.386 82.248 h 143.226 c 34.216 0 53.176 -4.788 65.442 -16.527 C 304.633 235.518 310 215.863 310 181.835 v -53.669 C 310 98.471 309.159 78.006 297.917 64.645 z M 199.021 162.41 l -65.038 33.991 c -1.454 0.76 -3.044 1.137 -4.632 1.137 c -1.798 0 -3.592 -0.484 -5.181 -1.446 c -2.992 -1.813 -4.819 -5.056 -4.819 -8.554 v -67.764 c 0 -3.492 1.822 -6.732 4.808 -8.546 c 2.987 -1.814 6.702 -1.938 9.801 -0.328 l 65.038 33.772 c 3.309 1.718 5.387 5.134 5.392 8.861 C 204.394 157.263 202.325 160.684 199.021 162.41 z" stroke-linecap="round" />
-                </g>
-                </svg>
-            </a>
-            <a class="ml-3 text-gray-500" href="https://github.com/orgs/TinkerHub-Farook-College/" target="_blank">
-              <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 640 480" xml:space="preserve">
-                <g transform="matrix(20.19 0 0 20.19 319.87 239.88)"  >
-                <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(107,114,128); fill-rule: nonzero; opacity: 1;"  transform=" translate(-12, -12)" d="M 12 0.297 c -6.63 0 -12 5.373 -12 12 c 0 5.303 3.438 9.8 8.205 11.385 c 0.6 0.113 0.82 -0.258 0.82 -0.577 c 0 -0.285 -0.01 -1.04 -0.015 -2.04 c -3.338 0.724 -4.042 -1.61 -4.042 -1.61 C 4.422 18.07 3.633 17.7 3.633 17.7 c -1.087 -0.744 0.084 -0.729 0.084 -0.729 c 1.205 0.084 1.838 1.236 1.838 1.236 c 1.07 1.835 2.809 1.305 3.495 0.998 c 0.108 -0.776 0.417 -1.305 0.76 -1.605 c -2.665 -0.3 -5.466 -1.332 -5.466 -5.93 c 0 -1.31 0.465 -2.38 1.235 -3.22 c -0.135 -0.303 -0.54 -1.523 0.105 -3.176 c 0 0 1.005 -0.322 3.3 1.23 c 0.96 -0.267 1.98 -0.399 3 -0.405 c 1.02 0.006 2.04 0.138 3 0.405 c 2.28 -1.552 3.285 -1.23 3.285 -1.23 c 0.645 1.653 0.24 2.873 0.12 3.176 c 0.765 0.84 1.23 1.91 1.23 3.22 c 0 4.61 -2.805 5.625 -5.475 5.92 c 0.42 0.36 0.81 1.096 0.81 2.22 c 0 1.606 -0.015 2.896 -0.015 3.286 c 0 0.315 0.21 0.69 0.825 0.57 C 20.565 22.092 24 17.592 24 12.297 c 0 -6.627 -5.373 -12 -12 -12" stroke-linecap="round" />
-                </g>
-                </svg>
-            </a>
-            <a class="ml-3 text-gray-500" href="https://www.instagram.com/tinkerhub_fc/" target="_blank">
-              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-              </svg>
-            </a>
-            <a class="ml-3 text-gray-500" href="https://www.linkedin.com/company/tinkerhub-fc/" target="_blank">
-              <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
-                <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
-                <circle cx="4" cy="4" r="2" stroke="none"></circle>
-              </svg>
-            </a>
-          </span>
-=======
-        <p class="lg:w-1/2 w-full leading-relaxed text-gray-500 wow fadeInRight">A sneak peek into achievements of TinkerHub Farook
-          College campus community members.</p>
-      </div>
-      <div class="flex md:justify-evenly justify-center flex-wrap items-stretch  -m-4" id="achievements">
-        <div class="flex justify-center mt-5" id="loader"><img src="img/loading.gif" alt="loading" class="w-5 h-5">
->>>>>>> 163b18dc8b5ac5c1adfa423d09694eb89add9de3
-        </div>
-      </div>
-    </div>
-  </section>
 
   <footer class="text-gray-600 body-font">
     <div class="flex w-full justify-end pr-10">
@@ -226,6 +170,7 @@
         TinkerHub FC —
         <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@rijfas</a>
         <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@unnikrishnan</a>
+        <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@adilayyoob</a>
       </p>
       <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
         <a class="text-gray-500" href="https://www.youtube.com/channel/UCfHpoBCfct0z0GU2azdfD7Q" target="_blank">
