--- a/index.html
+++ b/index.html
@@ -643,6 +643,7 @@
         TinkerHub FC —
         <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@rijfas</a>
         <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@unnikrishnan</a>
+        <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@adilayyoob</a>
       </p>
       <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
         <a class="text-gray-500" href="https://www.youtube.com/channel/UCfHpoBCfct0z0GU2azdfD7Q" target="_blank">
