--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
         <div class="p-4 md:w-1/3 sm:mb-0 mb-6 wow fadeInUp">
           <div class="rounded-lg h-64 overflow-hidden">
-            <img alt="content" class="object-cover object-center h-full w-full" src="events/assets/event_9.jpeg">
+            <img alt="content" class="object-cover object-center h-full w-full" src="events/assets/event_9.webp">
           </div>
           <h2 class="text-xl font-medium title-font text-gray-900 mt-5">WIT Orientation</h2>
           <p class="text-base leading-relaxed mt-2">Women In Tech aka WIT is a girls only platform which recently
@@ -282,7 +282,7 @@
         </div>
         <div class="p-4 md:w-1/3 sm:mb-0 mb-6 wow fadeInUp" data-wow-delay="0.5s">
           <div class="rounded-lg h-64 overflow-hidden">
-            <img alt="content" class="object-cover object-center h-full w-full" src="events/assets/event_6.png">
+            <img alt="content" class="object-cover object-center h-full w-full" src="events/assets/event_6.webp">
           </div>
           <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Python KickStart</h2>
           <p class="text-base leading-relaxed mt-2">Python Kickstart was our first major series conducted. Main agenda
@@ -297,7 +297,7 @@
         </div>
         <div class="p-4 md:w-1/3 sm:mb-0 mb-6 wow fadeInUp" data-wow-delay="1s">
           <div class="rounded-lg h-64 overflow-hidden">
-            <img alt="content" class="object-cover object-center h-full w-full" src="events/assets/event_16.jpeg">
+            <img alt="content" class="object-cover object-center h-full w-full" src="events/assets/event_16.webp">
           </div>
           <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Intro to UI/UX</h2>
           <p class="text-base leading-relaxed mt-2">This session is mainly intended to give a breif idea on the UI/UX
